# AppToSync

./: README.md
job-tracker/: .env.example  .gitignore  CLAUDE.md  DEEPENING.md  DEPLOYMENT_PLAN.md  Dockerfile  MODULAR_ARCHITECTURE.md  README.md  fly.toml  main.py  pyproject.toml
job-tracker/.github/workflows/: ci.yml
job-tracker/app/: __init__.py  auth.py  config.py  database.py  email_parser.py  gmail.py  models.py  parsed_emails.py  routes.py  utils.py  validators.py  watchers.py
job-tracker/docs/: GEMINI.md  architecture.md  design.md  plan-groq-layout-statusfix.md  prd.md  tasks-to-improve.md
job-tracker/static/: styles.css
job-tracker/templates/: forgot_password.html  index.html  login.html  register.html
job-tracker/tests/: gemini.py  test_api_routes.py  test_app.py  test_company_watchers.py  test_email_parser.py  test_export_csv.py  test_gemini_email_parser.py  test_gmail_sync.py  test_parsed_emails.py
