[project]
name = "job-tracker"
version = "0.1.0"
description = "Local job application tracker prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"dotenv>=0.9.9",
	"Flask>=3.0,<4.0",
	"google-api-python-client>=2.170.0",
	"google-auth>=2.40.0",
	"google-auth-oauthlib>=1.2.2",
	"google-genai>=1.47.0",
	"groq>=1.0.0",
	"python-dotenv>=1.2.1",
	"requests>=2.32.0",
]

[project.scripts]
job-tracker = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
